Fix T64601 Error division by zero in GPUVertexFormat

The windows compiler use signed int by default for enums so that broke
the bit count I carefully did. Forcing uint fixes it.